--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -104,6 +104,23 @@ footer {
     margin-top: 2px;
 }
 
+.slogo-cont {
+    margin: 15px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.slogo {
+    margin: 0px 8px;
+    padding: 5px;
+}
+
+.slogo-img {
+    width: 42px;
+    height: auto;
+}
+
 @media (600px <=width <=1000px) {
 
     #vid-overlay {
@@ -125,6 +142,11 @@ footer {
     #ic-caret {
         max-width: 20px;
     }
+
+    .slogo-cont {
+        margin: 25px 0px 0px 0px;
+    }
+
 }
 
 @media (width <=600px) {
@@ -148,5 +170,14 @@ footer {
     #ic-caret {
         max-width: 15px;
         margin-left: 10px;
+    }
+
+    .slogo-cont {
+        margin: 20px 0px 0px 0px;
+    }
+
+    .slogo-img {
+        width: 35px;
+        height: auto;
     }
 }
