--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -7,6 +7,11 @@ body {
     min-width: 370px;
 }
 
+#intro-sec-cont {
+    width: 100%;
+    max-height: 900px;
+}
+
 #vid-overlay {
     display: flex;
     flex-direction: column;
@@ -121,6 +126,58 @@ footer {
 .slogo-img {
     width: 42px;
     height: auto;
+}
+
+#steam-link-cont {
+    padding: 120px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+    background-color: black;
+}
+
+#steam-link-icon {
+    width: 100%;
+    max-width: 80px;
+    margin-left: 30px;
+    height: auto;
+    display: flex;
+}
+
+#steam-link-btn-cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#steam-link-btn {
+    text-align: center;
+    font-size: 4em;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    padding: 40px 60px;
+    background-color: rgb(13 13 13 / 23%);
+    color: #dddddd;
+    box-shadow: 0 1px 12px rgba(128, 69, 218, 0.71);
+    border: 1px solid white;
+    border-radius: 2px;
+    text-decoration: none;
+    transition: background-color .1s ease-in-out, transform .2s ease-in-out, border-color .2s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#steam-link-btn:hover {
+    cursor: pointer;
+    background-color: rgba(13, 13, 13, 0.379);
+    box-shadow: 0 0px 18px rgba(129, 69, 218, 0.789);
+    transform: scale(1.1);
 }
 
 @media (600px <=width <=1000px) {
